force-app/main/default/objects/LLC_BI__KO_App_Column_Definition__c/LLC_BI__KO_App_Column_Definition__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This field is required. Column definitions for knockout apps.</description>
    <label>KO App Column Definition</label>
</CustomObject>