force-app/main/default/objects/LLC_BI__KO_App_Column_Definition__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>Designates the category in which this column will be used.</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>