force-app/main/default/objects/LLC_BI__KO_App_Column_Definition__c/fields/LLC_BI__Header__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Header__c</fullName>
    <description>This field is required. Header text for KO app column.</description>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>