force-app/main/default/objects/LLC_BI__KO_App_Column_Definition__c/fields/LLC_BI__KO_App__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__KO_App__c</fullName>
    <description>This field is required. Specifies the KO App in which this column will be used.</description>
    <label>KO App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>