force-app/main/default/objects/LLC_BI__KO_App_Column_Definition__c/fields/LLC_BI__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sort_Order__c</fullName>
    <description>This field is required. Index controlling the order in which the column will be displayed in relation to other columns</description>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>